@@ -365,8 +365,7 @@ LIBS_FULLSET = $(ROOTLIBS) \
                '$(GO4SYS)\lib\libGo4ThreadManager.lib' \
                '$(GO4SYS)\lib\libGo4TaskHandler.lib' \
                '$(GO4SYS)\lib\libGo4AnalBase.lib' \
-               '$(GO4SYS)\lib\libGo4Analysis.lib' \
-               '$(GO4SYS)\Go4Analysis\TGo4Version.obj'
+               '$(GO4SYS)\lib\libGo4Analysis.lib'
 
 LIBS_GUISET =  $(ROOTGLIBS) \
                $(if $(USEXMLIO), libXMLIO.lib,) \
@@ -379,7 +378,6 @@ LIBS_GUISET =  $(ROOTGLIBS) \
                libGo4TaskHandler.lib \
                libGo4AnalBase.lib \
                libGo4Analysis.lib \
-               ..\..\Go4Analysis\TGo4Version.obj \
                libGo4GUI.lib
 
 else
@@ -408,8 +406,7 @@ LIBS_FULLSET = $(ROOTLIBS) \
                -lGo4ThreadManager \
                -lGo4TaskHandler \
                -lGo4AnalBase \
-               -lGo4Analysis \
-               $(GO4SYS)/Go4Analysis/TGo4Version.$(ObjSuf)
+               -lGo4Analysis
 
 LIBS_GUISET   = $(ROOTGLIBS) \
                -lMinuit \
@@ -440,7 +437,6 @@ BASIC_LIB_DEP = $(if $(USEASIMAGE),$(ROOTLIBPATH)/libASImage.$(DllSuf),) \
 
 ANAL_LIB_DEP = $(GO4SYS)/lib/libGo4Analysis.$(DllSuf) \
                $(GO4SYS)/lib/libGo4AnalBase.$(DllSuf) \
-               $(GO4SYS)/lib/libGo4Version.$(DllSuf) \
                $(GO4SYS)/lib/libGo4TaskHandler.$(DllSuf) \
                $(GO4SYS)/lib/libGo4ThreadManager.$(DllSuf) \
                $(GO4SYS)/lib/libGo4Base.$(DllSuf) \
