@@ -26,9 +26,6 @@ THRDMNGR_LIB    = $(GO4DLLPATH)/$(THRDMNGR_LIBNAME).$(DllSuf)
 GO4TSKH_LIBNAME = $(LIB_PREFIX)Go4TaskHandler
 GO4TSKH_LIB     = $(GO4DLLPATH)/$(GO4TSKH_LIBNAME).$(DllSuf)
 
-VERSION_LIBNAME  = $(LIB_PREFIX)Go4Version
-VERSION_LIB      = $(GO4DLLPATH)/$(VERSION_LIBNAME).$(DllSuf)
-
 GO4ANBASE_LIBNAME = $(LIB_PREFIX)Go4AnalBase
 GO4ANBASE_LIB     = $(GO4DLLPATH)/$(GO4ANBASE_LIBNAME).$(DllSuf)
 
@@ -43,7 +40,6 @@ BUILDGO4LIBS = $(GO4FIT_LIB) \
                $(THRDMNGR_LIB) \
                $(GO4TSKH_LIB) \
                $(GO4ANBASE_LIB) \
-               $(VERSION_LIB) \
                $(GO4AN_LIB) \
                $(GO4BGUI_LIB)
 
@@ -111,7 +107,6 @@ clean-mainlibs:
 	@$(CleanLib) $(GO4TSKH_LIBNAME) $(GO4DLLPATH)
 	@$(CleanLib) $(GO4ANBASE_LIBNAME) $(GO4DLLPATH)
 	@$(CleanLib) $(GO4AN_LIBNAME) $(GO4DLLPATH)
-	@$(CleanLib) $(VERSION_LIBNAME) $(GO4DLLPATH)
 	@$(CleanLib) $(GO4BGUI_LIBNAME) $(GO4DLLPATH)
 
 clean-bin::
@@ -142,7 +137,8 @@ GO4ANBASE_O = $(MBSAPIBASE_O)  \
             $(GO4EVENTPAR_O) $(GO4EVENTPAR_DO) \
             $(EVENTSERVPAR_O) $(EVENTSERVPAR_DO) \
             $(DYNLIST_O) $(DYNLIST_DO) \
-            $(STATANAL_O) $(STATANAL_DO)
+            $(STATANAL_O) $(STATANAL_DO) \
+            $(VERSION_O)
 
 GO4ANBASE_LINKDEFS = $(GO4EVENTPAR_LINKDEF) \
                      $(EVENTSERVPAR_LINKDEF) \
@@ -184,16 +180,13 @@ $(GO4TSKH_LIB):   $(GO4TSKH_O)
 	@$(MakeLibrary) $(GO4TSKH_LIBNAME) "$(GO4TSKH_O)" $(GO4DLLPATH) "$(GO4TSKH_LINKDEFS)" "$(THRDMNGR_LIB) $(GO4BASE_LIB) $(BASIC_LIB_DEP)"
 
 $(GO4ANBASE_LIB):   $(GO4ANBASE_O)
-	@$(MakeLibrary) $(GO4ANBASE_LIBNAME) "$(GO4ANBASE_O)" $(GO4DLLPATH) "$(GO4ANBASE_LINKDEFS)" "$(VERSION_LIB) $(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
+	@$(MakeLibrary) $(GO4ANBASE_LIBNAME) "$(GO4ANBASE_O)" $(GO4DLLPATH) "$(GO4ANBASE_LINKDEFS)" "$(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
 
 $(GO4AN_LIB):   $(GO4AN_O)
-	@$(MakeLibrary) $(GO4AN_LIBNAME) "$(GO4AN_O)" $(GO4DLLPATH) "$(GO4AN_LINKDEFS)" "$(VERSION_LIB) $(GO4ANBASE_LIB) $(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
-
-$(VERSION_LIB): $(VERSION_O)
-	@$(MakeLibrary) $(VERSION_LIBNAME) "$(VERSION_O)" $(GO4DLLPATH)
+	@$(MakeLibrary) $(GO4AN_LIBNAME) "$(GO4AN_O)" $(GO4DLLPATH) "$(GO4AN_LINKDEFS)" "$(GO4ANBASE_LIB) $(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
 
 $(GO4BGUI_LIB):   $(GO4BGUI_O)
-	@$(MakeLibrary) $(GO4BGUI_LIBNAME) "$(GO4BGUI_O)" $(GO4DLLPATH) "$(GO4BGUI_LINKDEFS)" "$(VERSION_LIB) $(GO4ANBASE_LIB) $(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
+	@$(MakeLibrary) $(GO4BGUI_LIBNAME) "$(GO4BGUI_O)" $(GO4DLLPATH) "$(GO4BGUI_LINKDEFS)" "$(GO4ANBASE_LIB) $(GO4TSKH_LIB) $(THRDMNGR_LIB) $(GO4BASE_LIB) $(GO4FIT_LIB) $(BASIC_LIB_DEP)"
 
 Go4_Makefile_Rules = 
 include Makefile.rules
